--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  padding: 0;
+  margin: 0;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -35,4 +31,7 @@
   to {
     transform: rotate(360deg);
   }
+}
+.wrapper {
+  display: flex;
 }
